# tiny-chatbot-agents

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
configs/: agent_config.yaml  claude_desktop_config.example.json  crawl_config.yaml  embedding_config.yaml  evaluation_config.yaml
data/evaluation/: evaluation_dataset.json  evaluation_dataset_v1.json
docs/: crawlers.md  evaluation.md  hallucination-verifier.md  index.md  llm-list.md  mcp_server.md  rag_architecture.md  retrieval-system.md  search_ranking.md  vector_store.md
logs/: 26-02-01.md  26-02-03.md  langgraph-migration-validation.md
results/: eval_20260205_131813_default.json
scripts/: backfill_agent_answers.py  crawl.py  generate_adversarial_golden_set.py  generate_dataset.py  generate_tos_golden_set.py  ingest_qna.py  ingest_tos.py  run_evaluation.py  run_mcp_server.py  run_pipeline.py
src/: streamlit_app.py
src/crawlers/: __init__.py  base.py  qna_crawler.py  tos_crawler.py
src/evaluation/: __init__.py  config.py  dataset_generator.py  evaluator.py  frontier_client.py  golden_sets.py  judge_prompts.py  llm_judge.py  report.py  runner.py  schemas.py
src/feedback/: __init__.py  feedback.py
src/graph/: __init__.py  graph.py  state.py  utils.py
src/graphstore/: __init__.py  graph_store.py  triplet_extractor.py
src/llm/: __init__.py  base.py  factory.py  local_client.py  openai_client.py
src/mcp/: __init__.py  server.py
src/pipeline/: __init__.py  models.py  rag_pipeline.py
src/retrieval/: __init__.py  hybrid_search.py  qna_retriever.py  tos_retriever.py
src/router/: __init__.py  router.py
src/tos_search/: __init__.py  hybrid_search.py  reranker.py  rule_matcher.py  triplet_store.py
src/vectorstore/: __init__.py  backfill.py  embeddings.py  qna_store.py  (+1 more)
tests/: test_crawlers.py  test_dataset_generator.py  test_embeddings.py  test_evaluation.py  test_graph_nodes.py  test_graph_routers.py  test_llm_judge.py  test_pipeline.py  test_pipeline_integration.py  test_tos_search.py  test_vectorstore.py
(+15 files in other folders)
