[project]
name = "tiny-chatbot-agents"
version = "0.1.0"
description = "Local LLM 기반 약관 및 QnA CS 챗봇"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "chromadb>=1.0.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
graph = [
    "neo4j>=5.0.0",
]
llm = [
    "openai>=1.0.0",
]
mcp = [
    "fastmcp>=0.1.0",
]
evaluation = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
    "kiwipiepy>=0.18.0",
    "pydantic>=2.0.0",
]
ui = [
    "streamlit>=1.30.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
    "fastmcp>=0.1.0",
    "streamlit>=1.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
